--- a/src/views/SelectClient.fxml
+++ b/src/views/SelectClient.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -13,8 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="controllers.SelectClient">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SelectClient">
    <children>
       <BorderPane layoutX="10.0" layoutY="10.0">
          <center>
@@ -43,7 +42,7 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                            </rowConstraints>
                            <children>
-                              <ChoiceBox fx:id="choiceBoxClient" prefWidth="150.0" GridPane.rowIndex="1" />
+                              <ComboBox fx:id="comboBoxClient" prefWidth="150.0" GridPane.rowIndex="1" />
                            </children>
                         </GridPane>
                         <HBox alignment="CENTER" prefHeight="74.0" prefWidth="480.0">
