--- a/src/views/SelectUser.fxml
+++ b/src/views/SelectUser.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <BorderPane layoutX="10.0" layoutY="10.0">
          <center>
@@ -42,7 +42,7 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                            </rowConstraints>
                            <children>
-                              <ChoiceBox id="choiceBoxUser" fx:id="choiceBoxUser" prefWidth="150.0" GridPane.rowIndex="1" />
+                              <ComboBox fx:id="comboBoxUser" prefWidth="150.0" GridPane.rowIndex="1" />
                            </children>
                         </GridPane>
                         <HBox alignment="CENTER" prefHeight="74.0" prefWidth="480.0">
