--- a/src/views/ClientEdit.fxml
+++ b/src/views/ClientEdit.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -13,9 +13,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <VBox alignment="CENTER" prefHeight="325.0" prefWidth="480.0">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.ClientEdit">
+   <center>
+      <VBox alignment="CENTER" prefHeight="325.0" prefWidth="480.0" BorderPane.alignment="CENTER">
          <children>
             <Label text="Edit Client" textAlignment="CENTER">
                <font>
@@ -50,19 +50,19 @@
                         <Label text="Avenue" GridPane.rowIndex="3" />
                         <Label text="Delivery Instructions" GridPane.rowIndex="4" />
                         <Label text="Phone Number" GridPane.rowIndex="5" />
+                        <ChoiceBox fx:id="choiceBoxStreet" prefHeight="25.0" prefWidth="255.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <ChoiceBox fx:id="choiceBoxAvenue" prefHeight="25.0" prefWidth="278.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <TextField fx:id="textFieldPhoneNumber" promptText="(555) 555-5555" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <ComboBox fx:id="comboBoxStreet" prefHeight="25.0" prefWidth="253.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <ComboBox fx:id="comboBoxAvenue" prefHeight="25.0" prefWidth="252.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                      </children>
                   </GridPane>
                   <HBox alignment="CENTER" prefHeight="74.0" prefWidth="480.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Save">
+                        <Button fx:id="btnSave" mnemonicParsing="false" text="Save">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </Button>
-                        <Button cancelButton="true" mnemonicParsing="false" text="Cancel">
+                        <Button fx:id="btnCancel" cancelButton="true" mnemonicParsing="false" text="Cancel">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
@@ -79,5 +79,8 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
-   </children>
-</AnchorPane>
+   </center>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
+</BorderPane>
