--- a/src/views/ClientEdit.fxml
+++ b/src/views/ClientEdit.fxml
@@ -27,7 +27,7 @@
             </Label>
             <VBox>
                <children>
-                  <GridPane alignment="CENTER" hgap="10.0" vgap="5.0">
+                  <GridPane alignment="CENTER" hgap="10.0" prefHeight="209.0" prefWidth="460.0" vgap="5.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.4000244140625" minWidth="10.0" prefWidth="65.79998779296875" />
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.20001220703125" minWidth="10.0" prefWidth="250.20001220703125" />
@@ -36,6 +36,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -53,6 +54,8 @@
                         <ChoiceBox fx:id="choiceBoxStreet" prefHeight="25.0" prefWidth="255.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <ChoiceBox fx:id="choiceBoxAvenue" prefHeight="25.0" prefWidth="278.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <TextField fx:id="textFieldPhoneNumber" promptText="(555) 555-5555" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label text="Email" GridPane.rowIndex="6" />
+                        <TextField fx:id="textFieldEmail" prefHeight="61.0" prefWidth="269.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                      </children>
                   </GridPane>
                   <HBox alignment="CENTER" prefHeight="74.0" prefWidth="480.0">
