--- a/src/views/EditClient.fxml
+++ b/src/views/EditClient.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER" prefHeight="325.0" prefWidth="480.0">
@@ -27,7 +28,7 @@
             </Label>
             <VBox>
                <children>
-                  <GridPane alignment="CENTER" hgap="10.0" vgap="5.0">
+                  <GridPane alignment="CENTER" hgap="10.0" prefHeight="209.0" prefWidth="460.0" vgap="5.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.4000244140625" minWidth="10.0" prefWidth="65.79998779296875" />
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.20001220703125" minWidth="10.0" prefWidth="250.20001220703125" />
@@ -36,6 +37,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -51,8 +53,10 @@
                         <Label text="Delivery Instructions" GridPane.rowIndex="4" />
                         <Label text="Phone Number" GridPane.rowIndex="5" />
                         <TextField fx:id="textFieldPhoneNumber" promptText="(555) 555-5555" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <ComboBox fx:id="comboBoxStreet" prefHeight="25.0" prefWidth="253.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <ComboBox fx:id="comboBoxAvenue" prefHeight="25.0" prefWidth="252.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label text="Email" GridPane.rowIndex="6" />
+                        <TextField fx:id="textFieldEmail" prefHeight="61.0" prefWidth="269.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <ComboBox fx:id="comboBoxAvenue" prefHeight="25.0" prefWidth="253.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <ComboBox fx:id="comboBoxStreet" prefHeight="25.0" prefWidth="255.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
                   <HBox alignment="CENTER" prefHeight="74.0" prefWidth="480.0">
