--- a/src/views/EditUser.fxml
+++ b/src/views/EditUser.fxml
@@ -2,8 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -13,8 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="contollers.EditUser">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER" prefHeight="300.0" prefWidth="600.0" spacing="10.0">
          <children>
@@ -41,14 +41,14 @@
                   <Label text="Username" GridPane.rowIndex="1" />
                   <Label text="Confirm Passowrd" GridPane.rowIndex="3" />
                   <Label text="Role" GridPane.rowIndex="4" />
-                  <ChoiceBox fx:id="choiceBoxUserRole" prefHeight="25.0" prefWidth="281.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <Label text="Email" GridPane.rowIndex="5" />
                   <TextField fx:id="textFieldUserUsername" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="textFieldUserPassword" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField fx:id="textFieldUserPassword" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <TextField fx:id="textFieldUserEmail" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                   <Label text="Name" />
                   <TextField fx:id="textFieldUserName" GridPane.columnIndex="1" />
+                  <ComboBox fx:id="comboBoxUserRole" prefHeight="25.0" prefWidth="301.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <PasswordField fx:id="textFieldUserPassword" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <PasswordField fx:id="textFieldUserPasswordConf" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
