--- a/src/views/EditCompanyInfo.fxml
+++ b/src/views/EditCompanyInfo.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,8 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditCompanyInfo">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditCompanyInfo">
    <children>
       <VBox alignment="CENTER" prefHeight="300.0" prefWidth="600.0" spacing="10.0">
          <children>
@@ -52,8 +51,6 @@
                   <Label text="Delivery Overhead Time" GridPane.rowIndex="4" />
                   <Label text="On Time Bonus Amount" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                   <Label text="On Time Allowable Variance" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                  <ChoiceBox fx:id="choiceBoxAvenue" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <ChoiceBox fx:id="choiceBoxStreet" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <TextField fx:id="textFieldDeliveryOverhead" promptText="10 minutes" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <TextField fx:id="textFieldBillRateBase" promptText="10" GridPane.columnIndex="3" />
@@ -62,6 +59,8 @@
                   <TextField fx:id="textFieldAvgCourierSpeed" promptText="5" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                   <TextField fx:id="textFieldOnTimeBonusAmount" promptText="\$2.00" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                   <TextField fx:id="textFieldOnTimeAllowableVariance" promptText="15" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                  <ComboBox fx:id="comboBoxStreet" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <ComboBox fx:id="comboBoxAvenue" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
