--- a/src/views/Invoice.fxml
+++ b/src/views/Invoice.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -16,8 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="577.0" prefWidth="665.0">
          <children>
@@ -40,12 +39,12 @@
                                     <Insets left="70.0" />
                                  </GridPane.margin>
                               </Label>
-                              <ComboBox prefHeight="25.0" prefWidth="280.0" GridPane.columnIndex="1" />
-                              <Button mnemonicParsing="false" text="Preview" GridPane.columnIndex="2">
+                              <Button fx:id="btnPreview" mnemonicParsing="false" text="Preview" GridPane.columnIndex="2">
                                  <GridPane.margin>
                                     <Insets left="140.0" />
                                  </GridPane.margin>
                               </Button>
+                              <DatePicker fx:id="datePickerStartDate" prefHeight="25.0" prefWidth="311.0" GridPane.columnIndex="1" />
                            </children>
                            <padding>
                               <Insets bottom="20.0" top="20.0" />
